@@ -1,5 +1,8 @@
 2010-03-18  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
+	* testsuite/TestMLPSolver.cpp: Adding a test case to add (and retrieve) fin from A.
+	* examples/module-AFin.hex: Likewise.
+
 	* include/dlvhex/MLPSolver.hpp: Fixing bug in setting fin to A and print useful information into a log file.
 
 2010-03-17  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
